<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_home_black_28dp"
            android:title="@string/home1" />
        <item
            android:id="@+id/nav_all_category"
            android:icon="@drawable/ic_men_nav"
            android:title="@string/men" />
        <item
            android:id="@+id/nav_my_account"
            android:icon="@drawable/ic_women_nav"
            android:title="@string/women" />
       <!-- <item
            android:id="@+id/nav_my_order"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/my_order" />
        <item
            android:id="@+id/nav_my_wishlist"
            android:icon="@drawable/favorite_black"
            android:title="@string/my_wishlist" />

        <item
            android:id="@+id/nav_my_change_profile_pic"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/change_pic" />-->
       <!-- <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />-->
      <!--  <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/exit_to_app_black"
            android:title="@string/exit" />-->
    </group>

</menu>
