<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:visibility="gone"
    android:id="@+id/LyError">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:gravity="center_horizontal"
           android:padding="@dimen/text_margin">


           <ImageView
               android:layout_width="@dimen/att_img_size"
               android:layout_height="@dimen/att_img_size"
               android:src="@drawable/att"/>
           <androidx.appcompat.widget.AppCompatTextView
               android:layout_margin="@dimen/text_margin"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/oops_hint"
               android:gravity="center"
               android:layout_gravity="center_horizontal"
               android:visibility="visible"
               android:textStyle="bold"
               style="@style/VerySmallText"/>



       </LinearLayout>

       <LinearLayout
           android:layout_margin="@dimen/text_margin"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <androidx.appcompat.widget.AppCompatTextView
               android:gravity="center_vertical"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               style="@style/SmallText"
               android:text="@string/err"/>
           <androidx.appcompat.widget.AppCompatTextView
               android:id="@+id/err_msg"
               android:text="@string/server_host_connection_failed"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               style="@style/VerySmallText"
               android:textColor="@color/colorBlackText_overlay"
               android:textStyle="bold"/>
       </LinearLayout>
   </LinearLayout>
</androidx.core.widget.NestedScrollView>

</LinearLayout>
